--- a/movie-service.yml
+++ b/movie-service.yml
@@ -15,15 +15,11 @@ spring:
 
 
 eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    registry-fetch-interval-seconds: 5
-    healthcheck:
-      enabled: true
-    service-url:
-      default-zone: http://localhost:8761/eureka
   instance:
-    prefer-ip-address: true
-
-
+    hostname: localhost
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
