--- a/series-service.yml
+++ b/series-service.yml
@@ -1,10 +1,6 @@
 server:
-  port: 0
-
+  port: ${PORT:${SERVER_PORT:0}}
 spring:
-  application:
-    name: catalog-service
-
   mongodb:
     embedded:
       version: 4.0.2
@@ -22,5 +18,3 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-
-
