--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -4,7 +4,14 @@ server:
 spring:
   application:
     name: catalog-service
-
+  zipkin:
+    baseUrl: http://localhost:9411/
+    enabled: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
   mongodb:
     embedded:
       version: 4.0.2
