--- a/series-service.yml
+++ b/series-service.yml
@@ -8,7 +8,14 @@ spring:
     mongodb:
       database: test
       port: 27017
-
+  zipkin:
+    baseUrl: http://localhost:9411/
+    enabled: true
+  rabbitmq:
+    username: guest
+    password: guest
+    host: localhost
+    port: 5672
 eureka:
   instance:
     hostname: localhost
