--- a/gateway.yml
+++ b/gateway.yml
@@ -16,6 +16,11 @@ spring:
           uri: lb://catalog-service/
           predicates:
             - Path=/catalog/**
+        
+        - id: serieRoute
+          uri: lb://serie-service/
+          predicates:
+            - Path=/serie/**
           
 
 eureka:
